[package]
name = "server-naive-rs"
version = "0.1.6"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
futures-util = "0.3"
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.6", features = ["derive", "env"] }
humantime = "2.1"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.36", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
h2 = "0.4.13"
http = "1.4.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio-util = "0.7"
scopeguard = "1.2.0"
dashmap = "6.1"
tikv-jemallocator = "0.6"
async-trait = "0.1"
arc-swap = "1"
libc = "0.2"
base64 = "0.22"
socket2 = "0.6"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"

# ACL Engine (remote)
acl-engine-rs = { git = "https://github.com/private-land/acl-engine-rs.git", tag = "v0.4.4", features = ["async"] }

# DNS resolution cache
dns-cache-rs = { git = "https://github.com/private-land/dns-cache-rs.git", tag = "v0.2.0" }

# Panel Integration (Connect-RPC via QUIC/H3)
panel-core = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.15" }
panel-connect-rpc = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.15" }

[[bin]]
name = "server-naive-agent"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"
rcgen = "0.14"
# expose ConnectionState trait so tests can read remote SETTINGS without a full h3 client loop
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
dns-cache-rs = { git = "https://github.com/private-land/dns-cache-rs.git", tag = "v0.2.0", features = ["test-utils"] }
panel-core = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.15" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
