[package]
name = "server-naive-rs"
version = "0.2.10"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
futures-util = "0.3"
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.6", features = ["derive", "env"] }
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
http = "1.4.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio-util = "0.7"
scopeguard = "1.2.0"
dashmap = "6.1"
tikv-jemallocator = "0.6"
async-trait = "0.1"
arc-swap = "1"
libc = "0.2"
base64 = "0.22"
socket2 = "0.6"
# H3 backend: tokio-quiche wraps cloudflare/quiche with a tokio
# event-loop driver.  `gcongestion` enables `Bbr2Gcongestion`, mapped from
# `config::CongestionControl::Bbr`.
#
# Note: this is BBRv2 from the gcongestion branch, NOT BBRv1 like quinn's
# `BbrConfig`.  Steady-state behaviour is similar; startup and loss
# response differ.  Validated as acceptable for the proxy use-case.
tokio-quiche = { version = "0.19", features = ["gcongestion"] }
quiche = "0.29"

# H2 backend: pingora — Cloudflare's production HTTP framework.
# `boringssl` feature shares the BoringSSL stack with tokio-quiche/quiche.
pingora = { version = "0.8", default-features = false, features = ["proxy", "boringssl"] }

# Required only to install the default crypto provider at startup so the
# rustls used internally by panel-core/connect-rust-h3 (quinn+rustls) does
# not panic on first use.  No direct rustls usage in our own code.
rustls = { version = "0.23.36", features = ["aws_lc_rs"] }

# ACL Engine (remote)
acl-engine-rs = { git = "https://github.com/private-land/acl-engine-rs.git", tag = "v0.4.4", features = ["async"] }

# DNS resolution cache
dns-cache-rs = { git = "https://github.com/private-land/dns-cache-rs.git", tag = "v0.2.0" }

# Panel Integration (Connect-RPC via QUIC/H3)
panel-core = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.17" }
panel-connect-rpc = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.17" }

[[bin]]
name = "server-naive-agent"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"
rcgen = "0.14"
criterion = { version = "0.5", features = ["html_reports"] }
# Cross-implementation client used in quiche_runner integration tests:
# a quinn + hyperium/h3 client drives the production tokio-quiche server.
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
# `i-implement-a-third-party-backend-and-opt-into-breaking-changes` exposes
# the ConnectionState trait so the SETTINGS test can read negotiated flags.
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
h3-quinn = "0.0.10"
# Cross-implementation client used in pingora_runner integration smoke:
# rustls + hyperium/h2 client drives the production pingora server.
tokio-rustls = "0.26"
h2 = "0.4"
dns-cache-rs = { git = "https://github.com/private-land/dns-cache-rs.git", tag = "v0.2.0", features = ["test-utils"] }
panel-core = { git = "https://github.com/private-land/server-panel-rs", tag = "v0.1.17" }

[[bench]]
name = "padding_phase1"
harness = false

[[bench]]
name = "uot_alloc"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
